# grocker

./: .gitignore  .travis.yml  CHANGELOG.rst  ChangeLog.rst  LICENSE.txt  MANIFEST.in  Makefile  README.rst  Readme.rst  builder.py  builder.sh  grocker.py  release.conf  release.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: publish-to-pypi.yml  tests.yml
base.docker/: Dockerfile  configure_apt.sh  provision.sh
bundles/base/: 00_apt_config.sh  01_provision.sh  Dockerfile  base.env  base_vars.sh
bundles/compiler/: 00_install_python.sh  01_compile.py  Dockerfile  Dockerfile.tpl
bundles/runner/: 00_install_package.sh  01_entrypoint.py  01_setup_cron.sh  02_entrypoint.py  Dockerfile  Dockerfile.tpl
bundles/runner/scripts/: cronwrapper.sh
bundles/runner/templates/: cron.env  cronwrapper.sh  django_smtp_settings.ini  nginx.conf  settings.ini  ssmtp.conf  supervisord.conf  uwsgi.ini
compiler.docker/: Dockerfile  compiler.py  provision.sh
docs/: advanced.rst  changelog.rst  changes.rst  concepts.rst  conf.py  index.rst  installation.rst  internals.rst  security.rst  troubleshooting.rst  usage.rst  workflow.graphml
docs/releases/: 2.2.0.rst  2.3.0.rst  2.3.1.rst  2.4.0.rst  2.4.1.rst  2.4.2.rst  3.0.0.rst  3.0.1.rst  index.rst
docs/talks/: index.rst
docs/talks/europython2016/: abstract.rst  config.cfg  slides.rst
docs/talks/europython2016/polyconseil/css/: screen.css
docs/usage/: build.rst  publish.rst  run.rst
grocker/: __init__.py  __main__.py  builders.py  helpers.py  loggers.py  six.py
grocker/resources/: grocker.yaml
grocker/resources/docker/: provision.env
grocker/resources/docker/compiler-image/: Dockerfile.j2  compile.py  grocker_sudoers  provision.sh
grocker/resources/docker/nginx-pypi/: nginx.conf
grocker/resources/docker/root-image/: Dockerfile.j2  apt-repositories.sh.j2  apt-setup.sh  provision.env  provision.sh
grocker/resources/docker/runner-image/: .grocker.j2  Dockerfile.j2  provision.sh
runner_template.docker/: Dockerfile  provision.sh
src/grocker/: __init__.py  __main__.py  builders.py  cleanners.py  helpers.py  loggers.py  six.py  utils.py
src/grocker/builders/: __init__.py  build.py  naming.py  op.py  wheels.py
src/grocker/resources/: grocker.yaml
src/grocker/resources/docker/compiler-image/: Dockerfile.j2  compile.py  provision.sh
src/grocker/resources/docker/root-image/: Dockerfile.j2  apt-setup.sh  provision.sh  provision.sh.j2
src/grocker/resources/docker/runner-image/: .grocker.j2  Dockerfile.j2  provision.sh
tests/: test_build.py  test_config.py
tests/resources/grocker-test-project/: setup.cfg  setup.py
tests/resources/grocker-test-project/gtp/: __init__.py  __main__.py
