[metadata]
name = grocker
version = 6.1
author = Polyconseil
author_email = opensource+grocker@polyconseil.fr
url = http://github.com/polyconseil/grocker
description = Docker image builder
long_description = file: Readme.rst
license = BSD 3-Clause License
keywords = docker, build, packaging
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Build Tools
    Topic :: System :: Software Distribution

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
    setuptools
install_requires =
    click
    docker>=2.0.2
    Jinja2
    setuptools>=18.0.1
    pip>=7.1.2
    pyyaml>=3.11
    packaging
    enum34; python_version == '2.7'

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    grocker = grocker.__main__:main

[flake8]
max-line-length = 120
exclude = build,dist,venv
max-complexity = 10

[bdist_wheel]
universal = true

[zest.releaser]
create-wheel = yes
