[metadata]
name = grocker
version = 6.2
author = Polyconseil
author_email = opensource+grocker@polyconseil.fr
url = http://github.com/polyconseil/grocker
description = Docker image builder
long_description = file: Readme.rst
license = BSD 3-Clause License
keywords = docker, build, packaging
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Build Tools
    Topic :: System :: Software Distribution

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
    setuptools
install_requires =
    click
    docker>=3.0.0
    Jinja2
    setuptools>=30.3
    pip>=7.1.2
    pyyaml>=3.11
    packaging
    enum34; python_version == '2.7'

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    grocker = grocker.__main__:main

[flake8]
max-line-length = 120
exclude = build,dist,venv
max-complexity = 10
ignore = B404,C815,D10,W503
# B404: Import subprocess
# C815: Missing trailing comma in Python 3.5+
# D10x: Missing docstrings
# W503: Line break before binary operator (we use W504: Line break after binary operator)

[isort]
force_single_line = 1
line_length = 120
multi_line_output = 3
known_first_party = grocker

[bdist_wheel]
universal = true

[zest.releaser]
create-wheel = yes
