[metadata]
name = grocker-test-project
description = Test project for Grocker
url = http://github.com/polyconseil/grocker
author = Polyconseil
author_email = opensource+grocker@polyconseil.fr
version = 3.0.1

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    Pillow  # dependency using C modules
    qrcode

[options.extras_require]
pep8 =
    pep8==1.7.0

[options.entry_points]
console_scripts =
    grocker-runner = gtp.__main__:main
    my-custom-runner = gtp.__main__:custom

[isort]
force_single_line = true
line_length=120
multi_line_output=3

[bdist_wheel]
universal = 1
